--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -158,12 +158,12 @@
   height: auto;
   max-height: 80%;
   width: auto;
-  max-width: 80%;
+  // max-width: 80%;
   padding: 15px;
   margin: 0px;
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
 }
 
 .card-collab-infos-upload p {
