--- a/app/assets/stylesheets/components/_card3.scss
+++ b/app/assets/stylesheets/components/_card3.scss
@@ -1,13 +1,3 @@
-.art-card {
-  overflow: hidden;
-  background: #fbfbfb;
-  box-shadow: 0 0 25px rgba(0,0,0,0.4);
-  margin: 30px auto;
-  object-fit: cover;
-  height: 500px;
-  width: 400px;
-
-}
 
 .container img {
   margin-top: 20px;
@@ -17,6 +7,17 @@
  margin-top: 0 !important;
 }
 
+.art-card {
+  overflow: hidden;
+  background: #fbfbfb;
+  box-shadow: 0 0 25px rgba(0,0,0,0.4);
+  margin: 30px auto;
+  object-fit: cover;
+  height: 500px;
+  width: 400px;
+  max-width: 90vw;
+
+}
 
 .art-card img {
   height: 400px;
