--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -12,6 +12,7 @@
 .our-creators {
   width: 380px;
   max-width: 90vw;
+  min-height: 380px;
   align-items: center;
   padding: 30px 0 40px;
   margin-bottom: 30px;
