--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,8 +5,8 @@
   background: #fbfbfb;
   box-shadow: 0 0 25px rgba(0,0,0,0.4);
   margin: 30px auto;
-  width: auto;
-  max-width: 450px;
+  width: 450px;
+  max-width: 100vw;
   height: auto;
   padding: 15px;
   }
