--- a/app/views/drawings/show.html.erb
+++ b/app/views/drawings/show.html.erb
@@ -8,20 +8,18 @@
     <p><%= cl_image_tag @drawing.image %></p>
   </div>
   <div class="container-edit text-center">
-    <% if current_user.type == "Creator" %>
       <h2>About the Dreamer</h2>
       <%= cl_image_tag @drawing.kid.avatar, class:"avatar-bordered-large" %>
-      <a>
-        <h3><%=link_to "#{@drawing.kid.first_name}, #{@drawing.kid.age}", kid_path(@drawing.kid)%></h3>
-      </a>
+      <h3><%=link_to "#{@drawing.kid.first_name}, #{@drawing.kid.age}", kid_path(@drawing.kid)%></h3>
+    <% if current_user.type == "Creator" && (@drawing.collaboration.creator == nil)%>
       <div class="card-text">
         <%= simple_form_for [@collaboration.creator, @collaboration] do |c| %>
           <%= c.input :creator_id, as: :hidden, input_html: { value: current_user.id } %>
           <%= c.input :drawing_id, as: :hidden, input_html: { value: @drawing.id } %>
           <%= c.submit "Choose #{@drawing.kid.first_name}'s Drawing!", class:"button-register my-3" %>
         <% end %>
-        <div><%= render 'drawings/download' %></div>
-      </div>
+    <% elsif current_user.type == "Creator" && (@drawing.booked?) %>
+      <%= render 'download', drawing: @drawing %>
     <% elsif (current_user.type == "Kid") && (@drawing.collaboration.creator == nil) %>
       <h3> NOT YET BOOKED </h3>
     <% elsif (current_user.type == "Kid") && (@drawing.booked?) %>
