--- a/app/assets/stylesheets/components/_title.scss
+++ b/app/assets/stylesheets/components/_title.scss
@@ -22,6 +22,13 @@
   margin-top: 30px;
 }
 
+.title h3 {
+  font-size: 30px;
+  font-family: 'Cutive Mono', monospace;
+  font-weight: bold;
+  color: black;
+}
+
 // edit account buttons
 .title a {
 font-family: 'Cutive Mono', monospace;
