--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,13 +1,20 @@
-<h4><em><%= @post.title %></em></h4>
-<h3><%= @post.summary %></h3>
-  <%= cl_image_tag @post.main_image_upload  %>
-  <p><%= @post.content %></p>
-
-
+<div class="title text-center">
+  <h1><em>"<%= @post.title %></em>"</h1>
+</div>
+<div class="post-content text-center">
+  <h3><%= @post.summary %></h3>
+  <div class="post-image">
+    <%= cl_image_tag @post.main_image_upload  %>
+  </div>
+  <div class="post-story">
+    <p><%= @post.content %></p>
+  </div>
+</div>
+<!-- link to other paths -->
 <% if current_user.admin %>
-  <%= link_to "Edit", edit_post_path(@post)%>
-  <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure your would like to delete this post?"} %>
-<% end %>
-  <%= link_to "All Posts", posts_path(@posts)%>
-
-
+  <div class="post-links text-center mb-3 ">
+    <%= link_to "Edit ", edit_post_path(@post), class:"mx-3"%>
+    <%= link_to "Delete ", post_path(@post), class:"mr-3", method: :delete, data: {confirm: "Are you sure your would like to delete this post?"} %>
+  <% end %>
+  <%= link_to "Back to All Posts", posts_path(@posts), class:"mx-3"%>
+</div>
