--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -25,7 +25,7 @@
       <%= f.button :submit, "Update", class:"btn-view-more mb-3" %>
     </div>
   <% end %>
-  <div class="title text-center mb-3 p-3 display-flex justify-content-between">
+  <div class="back-button text-center mb-3 p-3 display-flex justify-content-between">
     <h2><%= link_to "Back", :back %></h2>
   </div>
 </div>
