--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -27,7 +27,7 @@
           <div class="blog-card__info">
             <h5><%= post.title %></h5>
             <p><%= post.summary %></p>
-            <%= link_to "READ MORE", post_path(post), class:"btn btn--with-icon" %>
+            <%= link_to "READ MORE", post_path(post), class:"btn-post btn--with-icon" %>
           </div>
         </article>
       </div>
