--- a/app/views/drawings/_kid_drawings.html.erb
+++ b/app/views/drawings/_kid_drawings.html.erb
@@ -25,6 +25,10 @@
               <% else %>
                 <p><strong><em>Created at: </em></strong><%= drawing.created_at.strftime("%d / %m / %Y") %></p>
                 <p><strong><em>NOT YET BOOKED</em></strong></p>
+                 <%= link_to drawing_path(drawing),
+                method: :delete,
+                data: { confirm: "Click 'ok' to confirm deletion" } do %>
+                      <i class="fas fa-trash-alt"></i> <% end %>
               <% end %>
             </div>
           </div>
