--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -33,37 +33,7 @@
   </div>
 </div>
 <!-- My artwork -->
-<div>
-  <div class="row my-3 p-3">
-    <% @drawings.each do |drawing| %>
-      <% if drawing.booked? == false %>
-        <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="card-collab upload my3">
-            <%= link_to kid_drawing_path(drawing.kid, drawing) do %>
-              <%= cl_image_tag drawing.image %>
-            <% end %>
-            <div class="card-collab-infos-upload" style="position: relative;">
-              <div>
-                <p>"<%= drawing.name %>"</p>
-                <div class="collaboration-dates">
-                  <p><strong><em>Created at: </em></strong><%= drawing.created_at.strftime("%d / %m / %Y") %></p>
-                  <p><strong><em>NOT YET BOOKED</em></strong></p>
-                  <%#= link_to kid_drawing_path(drawing),
-                method: :delete,
-                data: { confirm: "Click 'ok' to confirm deletion" } do %>
-                    <%= link_to drawing_path(drawing),
-                method: :delete,
-                data: { confirm: "Click 'ok' to confirm deletion" } do %>
-                      <i class="fas fa-trash-alt"></i> <% end %>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        <% end %>
-      <% end %>
-    </div>
-  </div>
+<%= render 'drawings/kid_drawings', limit: 3 %>
   <!-- My collabs -->
   <div class="title text-center">
     <h1>My Collaborations</h1>
