render kid_drawing pages in kid profile and new drawing page

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -12,7 +12,7 @@
 .our-creators {
   width: 380px;
   max-width: 90vw;
-  min-height: 380px;
+  height: 350px;
   align-items: center;
   padding: 30px 0 40px;
   margin-bottom: 30px;
