--- a/app/views/creators/show.html.erb
+++ b/app/views/creators/show.html.erb
@@ -18,7 +18,33 @@
     <% end %>
   </div>
 </div>
-<!-- New customized collabs -->
+<!-- Drawings Booked by Artists -->
+<div class="collab-sectioning text-center">
+  <h1>My Current Bookings</h1>
+  <div class="row">
+    <% booked = @collaborations.select{|x| x.collab_upload.filename == nil} %>
+    <% booked.each do |collab| %>
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <div class="card-collab upload my-3">
+          <%= link_to kid_drawing_path(collab.drawing.kid, collab.drawing) do %>
+            <%= cl_image_tag collab.drawing.image %>
+          <% end %>
+          <div class="card-collab-infos-upload" style="position: relative;">
+            <div>
+              <p>"<%= collab.drawing.name %>"</p>
+              <p>by <%= collab.drawing.kid.first_name %></p>
+              <div class="collaboration-dates">
+                <p><strong><em>Booked on: </em></strong> <%= collab.created_at.strftime("%d / %m / %Y") %></em></strong></p>
+            <p><strong><em>Date due: </em></strong> <%= (collab.created_at + 7.days).strftime("%d / %m / %Y") %></em></strong></p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+<% end %>
+</div>
+</div>
+<!-- Collabs Done -->
 <div class="collab-sectioning text-center">
   <h1>My Collaborations Gallery</h1>
   <div class="row my-3 p-3">
