--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -4,16 +4,18 @@
 <div class="row mx-auto">
   <% @drawings.each do |drawing| %>
     <% next if drawing.booked? %>
-    <div class="art-card">
-      <%= link_to kid_drawing_path(drawing.kid, drawing) do %>
-        <%= cl_image_tag drawing.image %>
-      <% end %>
-      <div class="art-card-infos ml-3 mr-3">
-        <div class="title">
-          <h4>"<em><%= drawing.name %></em>"</h4>
-        </div>
-        <h2 class="art-card-name mr-3 my-3"><%= drawing.kid.first_name %></h2>
-        <div class="art-card-user avatar avatar-bordered mr-3 my-3" id="kid-avatar" style="background-image: url('<%= cl_image_path drawing.kid.avatar %>')">
+    <div class="col-lg-4 col-md-6 col-sm-12">
+      <div class="art-card">
+        <%= link_to kid_drawing_path(drawing.kid, drawing) do %>
+          <%= cl_image_tag drawing.image %>
+        <% end %>
+        <div class="art-card-infos ml-3 mr-3">
+          <div class="title">
+            <h4>"<em><%= drawing.name %></em>"</h4>
+          </div>
+          <h2 class="art-card-name mr-3 my-3"><%= drawing.kid.first_name %></h2>
+          <div class="art-card-user avatar avatar-bordered mr-3 my-3" id="kid-avatar" style="background-image: url('<%= cl_image_path drawing.kid.avatar %>')">
+          </div>
         </div>
       </div>
     </div>
