--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -26,7 +26,7 @@
           </div>
           <div class="blog-card__info">
             <h5><%= post.title %></h5>
-            <p><%= post.summary %></p>
+            <p><%= post.oneliner %></p>
             <%= link_to "READ MORE", post_path(post), class:"btn-post btn--with-icon" %>
           </div>
         </article>
