mailer code deactivated

--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,4 +1,4 @@
-<h1>User#welcome</h1>
-<p>Hi <%= @kid.first_name %>,</p>
-<p>Glad to have you back, visit our website to see more </p>
-<p>See ya!</p>
+<!-- <h1>User#welcome</h1> -->
+<!-- <p>Hi <%#= @kid.first_name %>,</p> -->
+<!-- <p>Glad to have you back, visit our website to see more </p>
+<p>See ya!</p> -->
