--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -7,7 +7,7 @@
     <div class="col-lg-4 col-md-6 col-sm-12">
       <div class="art-card">
         <%= link_to kid_drawing_path(drawing.kid, drawing) do %>
-          <%= cl_image_tag drawing.image %>
+          <%= cl_image_tag drawing.image.thumb.url %>
         <% end %>
         <div class="art-card-infos ml-3 mr-3">
           <div class="title">
