changed old logo to new logo on all pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>dreamCo Lab</title>
-    <%= favicon_link_tag 'logo.png', class:"logo" %>
+    <%= favicon_link_tag 'dcl_logo_icon.png', class:"logo" %>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
