--- a/app/views/pages/_homepage_carousel.html.erb
+++ b/app/views/pages/_homepage_carousel.html.erb
@@ -10,7 +10,8 @@
     <!-- // ARRAY OF SLIDES .each it -->
     <div class="banner d-flex flex-column" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)); width: 100vw; position: center">
       <div class="container-homepage position-absolute">
-        <h1 class="mt-3 p-3"> dreamCo Lab</h1>
+        <%= image_tag "dcl_logo_square.png", class:"w-25 h-25 my-3" %>
+        <!--         <h1 class="mt-3 p-3"> dreamco lab</h1> -->
         <p>keeping hope alive.</p>
       </div>
     </div>
