--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -45,6 +45,7 @@
 // DreamCoLab Intro
 .card-join-community {
   align-items: center;
+  margin-top: 50px;
   // border-bottom: 2px solid #b9e1dc;
 }
 
@@ -125,9 +126,9 @@ border-top: 2px solid  #b9e1dc;
 }
 
 .image-logo {
-  width: 100px;
+  max-width: 150px;
   height: 100px;
-  margin-top: 20px;
+  margin-top: 50px;
   margin-bottom: 0;
 }
 
