--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="brand-card col-sm-8 offset-sm-2 text-center">
   <div class="card-join-community text-center col-sm-8 offset-sm-2">
     <h3>JOIN OUR COMMUNITY.</h3>
-    <%= image_tag "logo.png", class:"image-logo" %>
+    <%= image_tag "dcl_logo_icon.png", class:"image-logo" %>
   </div>
   <p>dreamCo lab brings hope, inspiration, and creativity to hospitalized children by connecting them with artists around the world to help bring their creations and dreams to reality. </p>
   <div class="row">
