--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-dreamcolab">
   <%= link_to root_path, class: "navbar-brand" do %>
-    <p id="logo-name"><%= image_tag "logo.png" %>dreamCo lab</p>
+    <p id="logo-name"><%= image_tag "dcl_logo_icon.png" %>dreamco lab</p>
   <% end %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
