--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-dreamcolab">
   <%= link_to root_path, class: "navbar-brand" do %>
-    <p id="logo-name"><%= image_tag "dcl_logo_icon.png" %>dreamco lab</p>
+    <%= image_tag "dcl_logo_long.png" %>
   <% end %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -9,16 +9,16 @@
     <ul class="navbar-nav mr-auto">
       <% if current_user.present? %>
         <li class="nav-item active">
-          <%= link_to "Events |", posts_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item active">
           <%= link_to "Drawings |", drawings_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Creators |", creators_path, class: "nav-link" %>
         </li>
+        <li class="nav-item active">
+          <%= link_to "Events |", posts_path, class: "nav-link" %>
+        </li>
         <li class="nav-item">
-          <%= link_to "Dream Gallery", dream_gallery_path, class: "nav-link" %>
+          <%= link_to "Dream Gallery ", dream_gallery_path, class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
           <%= cl_image_tag current_user.avatar, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
