--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>dreamCo Lab</title>
+    <title>dreamco lab</title>
     <%= favicon_link_tag 'dcl_logo_icon.png', class:"logo" %>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
