--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,9 @@
     <ul class="navbar-nav mr-auto">
       <% if current_user.present? %>
         <li class="nav-item active">
+          <%= link_to "Partnerships |", partnerships_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item active">
           <%= link_to "Events |", posts_path, class: "nav-link" %>
         </li>
         <li class="nav-item active">
