--- a/app/views/creators/new.html.erb
+++ b/app/views/creators/new.html.erb
@@ -1,5 +1,5 @@
 <div class="full-height-page">
-  <div class="container d-flex justify-content-between">
+  <div class="container d-flex justify-content-between mb-80">
     <div class="sub-image col-xs-12">
       <%= image_tag 'artistphoto.jpg', class:'image' %>
     </div>
@@ -8,6 +8,22 @@
       <!-- <div class='row'> -->
       <!-- <div class='col'> -->
       <%= simple_form_for @creator do |f| %>
+       <%= f.input :first_name,
+                        required: true,
+                        autofocus: true,
+                        input_html: { autocomplete: "first_name" }%>
+        <%= f.input :last_name,
+                        required: true,
+                        autofocus: true,
+                        input_html: { autocomplete: "last_name" }%>
+        <%#= f.input :age,
+                        required: true,
+                        autofocus: true,
+                        input_html: { autocomplete: "age" }%>
+        <%#= f.input :city,
+                        required: true,
+                        autofocus: true,
+                        input_html: { autocomplete: "city" }%>
         <%= f.input :email,
                       required: true,
                       autofocus: true,
