--- a/app/views/creators/new.html.erb
+++ b/app/views/creators/new.html.erb
@@ -1,5 +1,5 @@
 <div class="full-height-page">
-  <div class="container d-flex justify-content-between mb-80">
+  <div class="container d-flex justify-content-between">
     <div class="sub-image col-xs-12">
       <%= image_tag 'artistphoto.jpg', class:'image' %>
     </div>
