--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -49,4 +49,24 @@
   background-color: white;
 }
 
+// placeholderavatars for creator and kids
+.avatar-bordered-xl-empty {
+  width: 230px;
+  height: 230px;
+  // object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0 1px 10px rgba(0,0,0,0.3);
+  border: white 3px solid;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  background-color: #746c82;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 78px;
+  font-family: 'Shadows Into Light', cursive;
+  font-weight: bold;
+}
 
