creator's index page - added initials for those without avatars

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -21,6 +21,7 @@
   background-size: cover;
 }
 
+
 // drawings show pages about the artist
 .avatar-bordered-large {
   width: 150px;
@@ -49,7 +50,7 @@
   background-color: white;
 }
 
-// placeholderavatars for creator and kids
+// placeholder avatars for creator and kids
 .avatar-bordered-xl-empty {
   width: 230px;
   height: 230px;
@@ -70,3 +71,24 @@
   font-weight: bold;
 }
 
+
+.avatar-empty {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-top: 0 !important;
+  background-color: #746c82;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Shadows Into Light', cursive;
+  font-weight: bold;
+}
+
+// .avatar-creators-empty {
+//   color: white;
+//   font-family: 'Shadows Into Light', cursive;
+//   font-weight: bold;
+
+// }
