--- a/app/views/creators/index.html.erb
+++ b/app/views/creators/index.html.erb
@@ -8,7 +8,13 @@
       <div class="col-sm-10 col-md-6 col-lg-4">
         <div class="our-creators">
           <div class="picture">
-            <%= cl_image_tag c.avatar %>
+             <% if c.avatar? == false && c.first_name? == false %>
+              <div class="initials">?</div>
+            <% elsif c.avatar? == false && c.first_name? %>
+              <div class="initials"><%= c.first_name.first %><%= c.last_name.first %></div>
+            <% else %>
+              <%= cl_image_tag c.avatar %>
+            <% end %>
           </div>
           <div class="creator-content">
             <h3 class="name"><%= c.first_name %>, <%= c.age %></h3>
