--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
     <meta name="twitter:creator" content="<%= DEFAULT_META["twitter_account"] %>">
     <meta name="twitter:image:src" content="<%= meta_image %>">
   </head>
-  <body style="background-image: url('<%= image_path "backgroundtext1.png" %>'); background-repeat: no-repeat; background-size: cover; background-position: center;" >
+  <body>
     <main>
       <%= render 'shared/flashes' %>
       <% if @home %>
