--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,10 +1,10 @@
 // Specific CSS for your home-page
 // Banner Top
 .banner {
-  height: 100vh;
+  height: 100vw;
+  height: 88vh;
   background-size: cover;
   background-position: center;
-  position: absolute;
 }
 
 .banner h1 {
@@ -24,10 +24,26 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
+.banner-thin {
+  height: 250px;
+  width: 100vw;
+  background-position: center top;
+  background-repeat: none;
+}
+
+.container-banner h1 {
+  font-family: 'Josefin Slab', serif;
+  font-size: 100px;
+  text-align: center;
+  color: white;
+  padding: 65px;
+}
+
 .container-homepage {
   margin-left: 40px;
   padding: 40px;
   z-index: 100;
+  width: 100vw;
   p {
   font-size: 25px;
   }
@@ -38,6 +54,14 @@
   position: relative;
 }
 
+.page-full {
+  height: 100vh;
+}
+
+.video {
+  margin-top: 50px;
+  box-shadow: 100px;
+}
 // @media(max-width: 576px) {
 //   #home-carousel {
 //     width: 100vw;
@@ -48,12 +72,12 @@
 // DreamCoLab Intro
 .card-join-community {
   align-items: center;
-  margin-top: 50px;
+  margin-top: 70px;
   // border-bottom: 2px solid #b9e1dc;
 }
 
 .card-join-community h3 {
-  font-family: 'Shadows Into Light', cursive;
+  font-family: 'Josefin Slab', serif;
   font-weight: bold;
   color: #756c83;
   font-size: 50px;
@@ -62,9 +86,14 @@
   text-shadow: 1px 1px 2px;
 }
 
+.card-join-community p {
+  font-family: 'Cutive Mono', monospace ;
+  font-size: 20px;
+}
+
 .card-join-community a {
-  background-color: #f38181;
-  color: white;
+  background-color: #98d3bb;
+  color: black;
   font-weight: bold;
   padding: 10px;
   border-radius: 10px;
@@ -80,7 +109,6 @@
 .brand-card {
 margin: 0 auto;
 padding: 20px;
-border-top: 2px solid  #b9e1dc;
 }
 
 .brand-card-gallery {
@@ -115,6 +143,8 @@ border-top: 2px solid  #b9e1dc;
   display: flex;
   justify-content: space-between;
   margin-top: 30px;
+  flex-wrap: wrap;
+  padding: 40px;
 
   .image {
     width: 100%;
@@ -128,15 +158,33 @@ border-top: 2px solid  #b9e1dc;
 }
 }
 
+.image-home {
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  object-fit:cover;
+  box-shadow: 5px;
+}
+
 .image-logo {
-  max-width: 150px;
-  height: 100px;
-  margin-top: 50px;
+  max-width: 500px;
+  height: 60px;
   margin-bottom: 0;
+  text-align: left;
 }
 
 body {
   background-size: cover;
   min-height:100%;
   height:auto !important;
+}
+
+.intro-vid {
+
+}
+
+.gallery-link-home {
+  text-align: right;
+  font-family: 'Josefin Slab', serif;
+  color: black;
 }
