--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,19 +3,13 @@
 //   background-position: center;
 //   position: absolute;
 //   padding: 150px 0;
+//   width: 100vw;
 // }
 
-// .banner h1 {
+// .banner p {
 //   margin: 0;
 //   color: white;
 //   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 //   font-size: 32px;
 //   font-weight: bold;
-// }
-
-// .banner p {
-//   font-size: 30px;
-//   color: white;
-//   opacity: .7;
-//   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 // }
