--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,6 +1,8 @@
 // Import Google fonts
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
-@import url('https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Cutive+Mono|Shadows+Into+Light');// Define fonts for body and headers
+@import url('https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Cutive+Mono|Shadows+Into+Light');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Slab&display=swap');
+// Define fonts for body and headers
 $body-font: "Open Sans", "Helvetica", "sans-serif";
 $headers-font: "Raleway", "Helvetica", "sans-serif";
 
