--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,21 +7,20 @@
   <div class="row">
     <div class="image-card col-lg-4 col-md-6 col-sm-8">
       <p><%= image_tag 'childdraw.jpg', class:"image" %></p>
+      <%= link_to "Organization", new_kid_path(@kid) %>
     </div>
     <div class="image-card col-lg-4 col-md-6 col-sm-8">
-      <p><%= image_tag 'childhosp1.jpg', class:"image" %></p>
-    </div>
-    <div class="image-card col-lg-4 col-md-6 col-sm-8">
-      <p><%= image_tag 'childhosp2.png', class:"image" %></p>
+      <p><%= image_tag 'artistphoto.jpg', class:"image" %></p>
+      <%= link_to "Creator", new_creator_path(@creator)%>
     </div>
   </div>
 </div>
-<div class="card-join-community text-center col-sm-8 offset-sm-2">
-  <div class="d-flex justify-content-center col-sm-8 offset-sm-2">
-    <%= link_to "I'm a dreamer", new_kid_path(@kid) %>
-    <%= link_to "I'm a creator", new_creator_path(@creator)%>
+<!-- <div class="card-join-community text-center col-sm-8 offset-sm-2">
+  <div class="d-flex justify-content-center">
+
+
   </div>
-</div>
+</div> -->
 <!-- <div class="container">
   <div class="row">
     <div class="col-sm-4 col-sm-offset-4">
