--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,9 +27,8 @@
     <meta name="twitter:creator" content="<%= DEFAULT_META["twitter_account"] %>">
     <meta name="twitter:image:src" content="<%= meta_image %>">
   </head>
-  <body style="background-image: url('<%= image_path "backgroundtext1.png" %>'); background-repeat: no-repeat; background-size: cover; background-position: center;" >
     <main>
-      <%= render 'shared/flashes' %>
+      <%#= render 'shared/flashes' %>
       <% if @home %>
         <%= render 'shared/homenav' %>
       <% else %>
